--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<header>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,maximum-scale=1,user-scalable=no,viewport-fit=cover">
-		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<meta property="og:url" content="https://et7ro.github.io/etcetero" />
 		<meta property="og:title" content="Professor ETcétero">
 		<meta property="og:image" content="https://et7ro.github.io/etcetero/etcetero.png">
